syntax = "proto3";

package proto;

option go_package = "empower1/internal/proto";

message BlockHeader {
  bytes prev_block_hash = 1;
  bytes merkle_root = 2;
  int64 timestamp = 3;
  int64 nonce = 4;
}

message Block {
  BlockHeader header = 1;
  repeated bytes transactions = 2;
}
